--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -7,11 +7,11 @@ on:
 
 env:
   AWS_REGION: us-east-1                
-  ECR_REPOSITORY: dao-frontend-rws-dev
-  ECS_CLUSTER: dao-frontend
-  ECS_SERVICE: dao-frontend-rws-dev
-  ECS_TASK_DEFINITION: dao-frontend-rws-dev
-  CONTAINER_NAME: dao-frontend-rws-dev
+  ECR_REPOSITORY: rscoll-dev-rws-dev
+  ECS_CLUSTER: rscoll-dev
+  ECS_SERVICE: rscoll-dev-rws-dev
+  ECS_TASK_DEFINITION: rscoll-dev-rws-dev
+  CONTAINER_NAME: rscoll-dev-rws-dev
 
   PROFILE: dao
 
