--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@rsksmart/rsk-contract-metadata": "^1.0.15",
     "@rsksmart/rsk-utils": "^1.1.0",
     "axios": "^1.6.2",
+    "axios-cache-interceptor": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ethers": "^6.13.1",
